# pretix-plugin-extended-api

./: .gitignore  .pre-commit-config.yaml  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: autofix-linting.yml  deploy.yml  style.yml  tests.yml
pretix_extended_api/: __init__.py  urls.py  views.py
pretix_extended_api/locale/de_Informal/LC_MESSAGES/: django.po
pretix_extended_api/views/: admission_ticket.py  admission_tickets.py  orders.py  permissions.py  serializers.py  tickets.py  vouchers.py
tests/: conftest.py  test_views.py
tests/views/: test_admission_ticket.py  test_admission_tickets.py  test_orders.py  test_tickets.py  test_vouchers.py
tests/views/tickets/: test_attendee_has_ticket.py  test_attendee_tickets.py
