[tool.poetry]
name = "pretix-plugin-extended-api"
version = "0.1.7"
description = "Extend the REST API to expose more information needed by the PyCon Italia repository."
authors = ["Python Italia"]
packages = [ { include = "pretix_extended_api" } ]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pretix = "4.4.0"
pytest = "^6.2.5"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pretix.plugin"]
pretix_extended_api = "pretix_extended_api:PretixPluginMeta"
